# Clinical_Trial_Agent

./: .env.example  Dockerfile  README.md  api.py  main.py  pyproject.toml  requirements.txt
Agent/: agent.py
MCP/: clinical_research_server.py
